--- a/contacto.html
+++ b/contacto.html
@@ -39,23 +39,15 @@
 
         <section class="home inicio">
 
-            <div class="container">
-                <div class="row center">
-                    <h1 class="col-10">“La belleza del cuerpo es indicio de la belleza del alma”</h1>
-
-                    <div class="col-3 boton">
-                        <a href="sobreNostros.html" class="boton_a">Sobre Nosotros</a>
-                    </div>
-                </div>
-            </div>
+          <iframe src="https://docs.google.com/forms/d/1EKnW7dnZO_-GXzXDeS8n0-cJ9I7RA4FO6ZNtny-K7ic/viewform?embedded=true" width="760" height="750" frameborder="0" marginheight="0" marginwidth="0">Cargando…</iframe>
         </section>
 
-        <section class="inicio">
+        <section class="home inicio">
 
             <div class="container">
                 <div class="row center">
                     <h2 class="col-10">Aprovecha el tratamiento de Apertura</h2>
-                    <p class="col-10 layout_b">Para este mes de las madres en el cual puedes mejorar el aspecto. Reduciendo el depóstio de grasas y arrugas(lineas de expresioón). Dale una chineadita a tu mama con un procedimento no invasivo</p>
+                    <p class="col-10">Para este mes de las madres en el cual puedes mejorar el aspecto. Reduciendo el depóstio de grasas y arrugas(lineas de expresioón). Dale una chineadita a tu mama con un procedimento no invasivo</p>
                     <div class="col-3 boton">
                         <a href="contacto.html" class="boton_a">Contacto</a>
                     </div>
