--- a/servicios.html
+++ b/servicios.html
@@ -46,11 +46,11 @@
             </div>
         </section>
 
-        <section class="home inicio">
+        <section class="layout_c inicio">
 
             <div class="container">
                 <div class="row center">
-                  <h2 class="col-10 marg-4b">Ofrecemos</h2>
+                  <h2 class="col-10 marg-4b layout_b">Ofrecemos</h2>
                   <div class="col-10 row between">
                     <div class="col-5 cuadro">
                       <ul>
