--- a/sobreNosotros.html
+++ b/sobreNosotros.html
@@ -42,26 +42,32 @@
             <div class="container">
                 <div class="row center">
                     <h1 class="col-10 marg-4">Sobre Nosotros</h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                    <div class="row around">
-                      <div class="col-3 bordes center">
-                        <h2 class="col-10 mision">Misión</h2>
-                        <p class="col-10">Mejorar la calidad de la salud tanto física como emocional</p>
-                      </div>
-                      <div class="col-3 bordes">
-                        <h2 class="col-10 mision ">Visión</h2>
-                        <p class="col-10">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                      </div>
-                      <div class="col-3 bordes">
-                        <h2 class="col-10 mision">Valores</h2>
-                        <p class="col-10">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus inventore possimus sequi quibusdam hic voluptatum ullam natus, veritatis dolores sapiente nam magni, esse delectus! Tenetur incidunt minus accusamus nesciunt animi!</p>
-                      </div>
-                    </div>
-
+                      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
             </div>
         </section>
 
-        <section class="home inicio">
+        <section class="inicio2">
+
+            <div class="container">
+                <div class="row center">
+                  <div class="row around">
+                    <div class="col-3 bordes center">
+                      <h2 class="col-10 mision layout_b">Misión</h2>
+                      <p class="col-10 layout_b">Mejorar la calidad de la salud tanto física como emocional</p>
+                    </div>
+                    <div class="col-3 bordes">
+                      <h2 class="col-10 mision layout_b">Visión</h2>
+                      <p class="col-10 layout_b">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                    </div>
+                    <div class="col-3 bordes">
+                      <h2 class="col-10 mision layout_b">Valores</h2>
+                      <p class="col-10 layout_b">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus inventore possimus sequi quibusdam hic voluptatum ullam natus, veritatis dolores sapiente nam magni, esse delectus! Tenetur incidunt minus accusamus nesciunt animi!</p>
+                    </div>
+                  </div>
+            </div>
+        </section>
+
+        <section class="inicio">
 
             <div class="container">
                 <div class="row between">
