Arreglos que pidio jose

--- a/contacto.html
+++ b/contacto.html
@@ -8,58 +8,71 @@
         <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     </head>
     <body>
-        <header>
-            <div class="container">
-                <nav class="row between middle">
+      <header>
+          <div class="container">
+              <nav class="row between middle">
 
-                    <div class="col-4">
-                        <a href="index.html">
-                            <p>Clínica Médica Corazón de Jesús</p>
-                        </a>
-                    </div>
+                  <div class="col-4">
+                      <div class="container">
 
-                    <div class="col-3 end">
-                        <ul class="row between">
-                            <li class="col">
-                                <a href="sobreNosotros.html" class="layout_a">Sobre Nosotros</a>
-                                </li>
-                            <li class="col">
-                                <a href="servicios.html" class="layout_a">Servicios</a>
-                            </li>
-                            <li class="col">
-                                <a href="contacto.html" class="layout_a">Contacto</a>
-                            </li>
-                        </ul>
-                    </div>
+                          <a href="index.html" class="row">
+                              <img src="assets/logo.png" alt="logo" class="col-3 logo">
+                              <p class="col-9 dorado">Clínica Médica Corazón de Jesús</p>
+                          </a>
 
-                </nav>
+                      </div>
+                  </div>
+
+                  <div class="col-3 end">
+                      <ul class="row between">
+                          <li class="col">
+                              <a href="sobreNosotros.html" class="layout_a">Sobre Nosotros</a>
+                              </li>
+                          <li class="col">
+                              <a href="servicios.html" class="layout_a">Servicios</a>
+                          </li>
+                          <li class="col">
+                              <a href="contacto.html" class="layout_a">Contacto</a>
+                          </li>
+                      </ul>
+                  </div>
+
+              </nav>
+          </div>
+      </header>
+
+      <section class="inicio">
+
+          <div class="container">
+              <div class="row center">
+                <h3 class="col-11">Horario</h3>
+                <p class="layout_b col-11">Nuestro horario de atención es de lunes a viernes de ?am a ?pm, y sábados de ?am a ?pm.</p>
+
+              </div>
+          </div>
+      </section>
+
+        <section class="inicio">
+          <div class="row center">
+            <iframe class="col-6" src="https://docs.google.com/forms/d/1EKnW7dnZO_-GXzXDeS8n0-cJ9I7RA4FO6ZNtny-K7ic/viewform?embedded=true" width="760" height="750" frameborder="0" marginheight="0" marginwidth="0">Cargando…</iframe>
+            <div class="col-5">
+              <h3>Teléfono</h3>
+              <p class="layout_b">2442-5092</p>
+              <h3>Correo</h3>
+              <p class="layout_b ">ccorazondejesus@yahoo.com</p>
+              <h3>Dirección</h3>
+              <p class="layout_b ">Esquina Norte Este de la Iglesia de la Catedral 25 metros al Norte, Alajuela, Costa Rica</p>
             </div>
-        </header>
-
-
-        <section class="home inicio">
-
-          <iframe src="https://docs.google.com/forms/d/1EKnW7dnZO_-GXzXDeS8n0-cJ9I7RA4FO6ZNtny-K7ic/viewform?embedded=true" width="760" height="750" frameborder="0" marginheight="0" marginwidth="0">Cargando…</iframe>
+        </div>
         </section>
 
-        <section class="home inicio">
 
-            <div class="container">
-                <div class="row center">
-                    <h2 class="col-10">Aprovecha el tratamiento de Apertura</h2>
-                    <p class="col-10">Para este mes de las madres en el cual puedes mejorar el aspecto. Reduciendo el depóstio de grasas y arrugas(lineas de expresioón). Dale una chineadita a tu mama con un procedimento no invasivo</p>
-                    <div class="col-3 boton">
-                        <a href="contacto.html" class="boton_a">Contacto</a>
-                    </div>
-                </div>
-            </div>
-        </section>
 
         <footer>
             <div class="container">
                 <div class="row">
                     <div class="col-12">
-                        2015 - <a href="http://twitter.com/sasasamaes" target="_blank" class="layout_a">Francisco Campos Díaz</a>
+                        2015 - <a href="https://www.facebook.com/Imprimemascr01/?fref=ts" target="_blank" class="layout_a">Imprimemas</a>
                     </div>
                 </div>
             </div>
