--- a/index.html
+++ b/index.html
@@ -13,9 +13,14 @@
                 <nav class="row between middle">
 
                     <div class="col-4">
-                        <a href="index.html">
-                            <p>Clínica Médica Corazón de Jesús</p>
-                        </a>
+                        <div class="container">
+
+                            <a href="index.html" class="row">
+                                <img src="assets/logo.png" alt="logo" class="col-3 logo">
+                                <p class="col-9 dorado">Clínica Médica Corazón de Jesús</p>
+                            </a>
+
+                        </div>
                     </div>
 
                     <div class="col-3 end">
@@ -66,9 +71,9 @@
         <footer>
             <div class="container">
                 <div class="row">
-                    <div class="col-12">
-                        2015 - <a href="http://twitter.com/sasasamaes" target="_blank" class="layout_a">Francisco Campos Díaz</a>
-                    </div>
+                  <div class="col-12">
+                      2015 - <a href="https://www.facebook.com/Imprimemascr01/?fref=ts" target="_blank" class="layout_a">Imprimemas</a>
+                  </div>
                 </div>
             </div>
         </footer>
