--- a/sobreNosotros.html
+++ b/sobreNosotros.html
@@ -8,33 +8,38 @@
         <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     </head>
     <body>
-        <header>
-            <div class="container">
-                <nav class="row between middle">
+      <header>
+          <div class="container">
+              <nav class="row between middle">
 
-                    <div class="col-4">
-                        <a href="index.html">
-                            <p>Clínica Médica Corazón de Jesús</p>
-                        </a>
-                    </div>
+                  <div class="col-4">
+                      <div class="container">
 
-                    <div class="col-3 end">
-                        <ul class="row between">
-                            <li class="col">
-                                <a href="/sobreNosotros.html" class="layout_a">Sobre Nosotros</a>
-                                </li>
-                            <li class="col">
-                                <a href="/servicios.html" class="layout_a">Servicios</a>
-                            </li>
-                            <li class="col">
-                                <a href="/contacto.html" class="layout_a">Contacto</a>
-                            </li>
-                        </ul>
-                    </div>
+                          <a href="index.html" class="row">
+                              <img src="assets/logo.png" alt="logo" class="col-3 logo">
+                              <p class="col-9 dorado">Clínica Médica Corazón de Jesús</p>
+                          </a>
 
-                </nav>
-            </div>
-        </header>
+                      </div>
+                  </div>
+
+                  <div class="col-3 end">
+                      <ul class="row between">
+                          <li class="col">
+                              <a href="sobreNosotros.html" class="layout_a">Sobre Nosotros</a>
+                              </li>
+                          <li class="col">
+                              <a href="servicios.html" class="layout_a">Servicios</a>
+                          </li>
+                          <li class="col">
+                              <a href="contacto.html" class="layout_a">Contacto</a>
+                          </li>
+                      </ul>
+                  </div>
+
+              </nav>
+          </div>
+      </header>
 
 
         <section class="home inicio2">
@@ -94,9 +99,9 @@
         <footer>
             <div class="container">
                 <div class="row">
-                    <div class="col-12">
-                        2015 - <a href="http://twitter.com/sasasamaes" target="_blank" class="layout_a">Francisco Campos Díaz</a>
-                    </div>
+                  <div class="col-12">
+                      2015 - <a href="https://www.facebook.com/Imprimemascr01/?fref=ts" target="_blank" class="layout_a">Imprimemas</a>
+                  </div>
                 </div>
             </div>
         </footer>
