arreglo de logo movil

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                     <div class="col-4">
                         <div class="container">
 
-                            <a href="index.html" class="row">
+                            <a href="index.html" class="row center">
                                 <img src="assets/logo.png" alt="logo" class="col-3 logo">
                                 <p class="col-9 dorado">Clínica Médica Corazón de Jesús</p>
                             </a>
