Pagina Base de prueba

--- a/contacto.html
+++ b/contacto.html
@@ -66,8 +66,7 @@
         </div>
         </section>
 
-
-
+        <div id="map"></div>
         <footer>
             <div class="container">
                 <div class="row">
@@ -75,7 +74,8 @@
                         2015 - <a href="https://www.facebook.com/Imprimemascr01/?fref=ts" target="_blank" class="layout_a">Imprimemas</a>
                     </div>
                 </div>
-            </div>
         </footer>
     </body>
+  <script src="js/map.js">
+  </script>
 </html>
