--- a/sobreNosotros.html
+++ b/sobreNosotros.html
@@ -47,7 +47,6 @@
             <div class="container">
                 <div class="row center">
                     <h1 class="col-10 marg-4">Sobre Nosotros</h1>
-                      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
             </div>
         </section>
 
@@ -56,13 +55,16 @@
             <div class="container">
                 <div class="row center">
                   <div class="row around">
+                    <div class="col-10 center">
+                       <p class="layout_b">Clinica nace en el 2004, como un proyecto pequeño familiar cuyo objetivo es el lucha por el bienestar fisico y mental de sus pacientes. Mejorando su calidad de vida. Nuestros principios estan basados en una tradicion familiar por la devocion al Sagrado Corazon de Jesús quien es nuestra guia.</p>
+                    </div>
                     <div class="col-3 bordes center">
                       <h2 class="col-10 mision layout_b">Misión</h2>
                       <p class="col-10 layout_b">Mejorar la calidad de la salud tanto física como emocional</p>
                     </div>
                     <div class="col-3 bordes">
                       <h2 class="col-10 mision layout_b">Visión</h2>
-                      <p class="col-10 layout_b">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                      <p class="col-10 layout_b">La Clinica Medica Corazon de Jesús lucha por ser una de las mejores instituciones privadas a nivel nacional e internacional con los valores cristianos, siguiendo el corazon de jesús de quien fue su origen y asi cumplir con todas las responsabilidades a nivel social como empresarial al brindar los servicios medicos a nivel fisico y mental.<p>
                     </div>
                     <div class="col-3 bordes">
                       <h2 class="col-10 mision layout_b">Valores</h2>
@@ -82,14 +84,14 @@
                       <figure class="center">
                         <img src="assets/dosMovil.jpg" alt="" class="imgR">
                       </figure>
-                      <p>Dr Marjorie Gutierrez Sequeira</p>
+                      <p>Dra Marjorie Gutiérrez Sequeira</p>
                     </div>
                     <div class="col-5 cuadro">
-                      <p>Medicina General / Medicina Laboral</p>
+                      <p>Medicina General / Medicina del Trabajo</p>
                       <figure class="center">
                         <img src="assets/dosMovil.jpg" alt="" class="imgR">
                       </figure>
-                      <p> Dr Leyla Guitierrz Sequeira</p>
+                      <p> Dra Leyla Gutiérrez Sequeira</p>
                     </div>
 
                 </div>
