--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     <h1 class="col-10">“La belleza del cuerpo es indicio de la belleza del alma”</h1>
 
                     <div class="col-3 boton">
-                        <a href="sobreNostros.html" class="boton_a">Sobre Nosotros</a>
+                        <a href="sobreNosotros.html" class="boton_a">Sobre Nosotros</a>
                     </div>
                 </div>
             </div>
