--- a/servicios.html
+++ b/servicios.html
@@ -47,16 +47,16 @@
             <div class="container">
                 <div class="row center">
                     <h1 class="col-10 ">Servicios</h1>
-                    <p class="col-10">Clínica Médica Corazón de Jesús se preocupa por tu salud fsíca y mental le ofrecemos los novedosos tratamientos con nuestro nuevo equipo Exilis Elite que revoluciona de forma no invasiva, el tratamiento para la reducción de arrugas, facidez, remodelación de depositos de grasa no deseada, esta tecnología unica de ultrasonido, radiofrecuencia , enfriamiento de forma rápida y segura, certifcada por ISO, CE apro- bados por la FDA.</p>
             </div>
         </section>
 
-        <section class="layout_c inicio">
+        <section class="layout_c">
 
             <div class="container">
                 <div class="row center">
+                  <div class="col-10"> <p class="col-12 layout_b">Clínica Médica Corazón de Jesús se preocupa por tu salud fsíca y mental le ofrecemos los novedosos tratamientos con nuestro nuevo equipo Exilis Elite que revoluciona de forma no invasiva, el tratamiento para la reducción de arrugas, facidez, remodelación de depositos de grasa no deseada, esta tecnología unica de ultrasonido, radiofrecuencia , enfriamiento de forma rápida y segura, certifcada por ISO, CE apro- bados por la FDA.</p></div>
                   <h2 class="col-10 marg-4b layout_b">Ofrecemos</h2>
-                  <div class="col-10 row between">
+                  <div class="col-12 row between">
                     <div class="col-5 cuadro">
                       <ul>
                         <li>Medicina para niños y adultos</li>
@@ -64,12 +64,12 @@
                         <li>Especialidad en Psiquiatría</li>
                         <li>Tratamiento no invasivo con Exilis elite BTL y otros</li>
                         <li>Control de peso</li>
-                        <li>Nutrición</li>
+
                       </ul>
                     </div>
                     <div class="col-5 cuadro">
                         <ul>
-                          <li>Acondicionamiento Físico</li>
+
                           <li>Flacidez</li>
                           <li>Dictámen de Licencia</li>
                           <li>Control de diferentes enfermedades</li>
@@ -78,8 +78,9 @@
                         </ul>
                     </div>
                   </div>
-
-
+                  <h2>Exilis</h2>
+                  <p>Es el dospositivo que revolicionó los tratamientos estétitocs </p>
+                  foto de la doctora
                 </div>
             </div>
         </section>
